[gd_scene load_steps=2 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="GraphEdit" type="GraphEdit" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 123.0
right_disconnects = true

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
editor/display_folded = true
margin_left = 9.0
margin_top = 17.8699
margin_right = 115.0
margin_bottom = 101.87
__meta__ = {
"_edit_group_": true
}

[node name="New" type="Button" parent="VBoxContainer2"]
margin_right = 106.0
margin_bottom = 20.0
focus_mode = 0
enabled_focus_mode = 0
text = "NEW"

[node name="HSeparator7" type="HSeparator" parent="VBoxContainer2"]
modulate = Color( 1, 1, 1, 0 )
show_behind_parent = true
margin_top = 24.0
margin_right = 106.0
margin_bottom = 28.0

[node name="Save" type="Button" parent="VBoxContainer2"]
margin_top = 32.0
margin_right = 106.0
margin_bottom = 52.0
focus_mode = 0
enabled_focus_mode = 0
text = "SAVE"

[node name="HSeparator5" type="HSeparator" parent="VBoxContainer2"]
modulate = Color( 1, 1, 1, 0 )
show_behind_parent = true
margin_top = 56.0
margin_right = 106.0
margin_bottom = 60.0

[node name="Load" type="Button" parent="VBoxContainer2"]
margin_top = 64.0
margin_right = 106.0
margin_bottom = 84.0
focus_mode = 0
enabled_focus_mode = 0
text = "LOAD"

[node name="HSeparator6" type="HSeparator" parent="VBoxContainer2"]
modulate = Color( 1, 1, 1, 0 )
show_behind_parent = true
margin_top = 88.0
margin_right = 106.0
margin_bottom = 92.0

[node name="Export" type="Button" parent="VBoxContainer2"]
margin_top = 96.0
margin_right = 106.0
margin_bottom = 116.0
focus_mode = 0
enabled_focus_mode = 0
text = "EXPORT"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
editor/display_folded = true
margin_left = 7.0
margin_top = 155.785
margin_right = 114.0
margin_bottom = 307.785
__meta__ = {
"_edit_group_": true
}

[node name="Text node" type="Button" parent="VBoxContainer"]
margin_right = 107.0
margin_bottom = 20.0
focus_mode = 0
enabled_focus_mode = 0
text = "Text node"

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
modulate = Color( 1, 1, 1, 0 )
show_behind_parent = true
margin_top = 24.0
margin_right = 107.0
margin_bottom = 28.0

[node name="Divert node" type="Button" parent="VBoxContainer"]
margin_top = 32.0
margin_right = 107.0
margin_bottom = 52.0
focus_mode = 0
enabled_focus_mode = 0
text = "Divert node"

[node name="HSeparator3" type="HSeparator" parent="VBoxContainer"]
modulate = Color( 1, 1, 1, 0 )
show_behind_parent = true
margin_top = 56.0
margin_right = 107.0
margin_bottom = 60.0

[node name="Question node" type="Button" parent="VBoxContainer"]
margin_top = 64.0
margin_right = 107.0
margin_bottom = 84.0
focus_mode = 0
enabled_focus_mode = 0
text = "Question node"

[node name="HSeparator4" type="HSeparator" parent="VBoxContainer"]
modulate = Color( 1, 1, 1, 0 )
show_behind_parent = true
margin_top = 88.0
margin_right = 107.0
margin_bottom = 92.0

[node name="Action node" type="Button" parent="VBoxContainer"]
margin_top = 96.0
margin_right = 107.0
margin_bottom = 116.0
focus_mode = 0
enabled_focus_mode = 0
text = "Action node"

[node name="HSeparator5" type="HSeparator" parent="VBoxContainer"]
modulate = Color( 1, 1, 1, 0 )
show_behind_parent = true
margin_top = 120.0
margin_right = 107.0
margin_bottom = 124.0

[node name="Random node" type="Button" parent="VBoxContainer"]
margin_top = 128.0
margin_right = 107.0
margin_bottom = 148.0
focus_mode = 0
enabled_focus_mode = 0
text = "Random node"

[node name="VBoxContainer3" type="VBoxContainer" parent="."]
margin_left = 10.0
margin_top = 367.0
margin_right = 113.0
margin_bottom = 588.0

[node name="TextEdit" type="TextEdit" parent="VBoxContainer3"]
margin_right = 103.0
margin_bottom = 30.38
rect_min_size = Vector2( 0, 30.38 )

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer3"]
margin_top = 34.0
margin_right = 103.0
margin_bottom = 54.0

[node name="Button" type="Button" parent="VBoxContainer3/HBoxContainer"]
margin_right = 27.0
margin_bottom = 20.0
focus_mode = 0
size_flags_horizontal = 3
enabled_focus_mode = 0
text = "+"

[node name="Button3" type="Button" parent="VBoxContainer3/HBoxContainer"]
margin_left = 31.0
margin_right = 72.0
margin_bottom = 20.0
focus_mode = 0
size_flags_horizontal = 3
enabled_focus_mode = 0
text = "EDIT"

[node name="Button2" type="Button" parent="VBoxContainer3/HBoxContainer"]
margin_left = 76.0
margin_right = 103.0
margin_bottom = 20.0
focus_mode = 0
size_flags_horizontal = 3
enabled_focus_mode = 0
text = "-"

[node name="NameList" type="ItemList" parent="VBoxContainer3"]
margin_top = 58.0
margin_right = 103.0
margin_bottom = 221.0
size_flags_vertical = 3
[connection signal="connection_request" from="GraphEdit" to="." method="_on_GraphEdit_connection_request"]
[connection signal="disconnection_request" from="GraphEdit" to="." method="_on_GraphEdit_disconnection_request"]
[connection signal="scroll_offset_changed" from="GraphEdit" to="." method="_on_GraphEdit_scroll_offset_changed"]
[connection signal="pressed" from="VBoxContainer2/New" to="." method="_on_New_pressed"]
[connection signal="pressed" from="VBoxContainer2/Save" to="." method="_on_Save_pressed"]
[connection signal="pressed" from="VBoxContainer2/Load" to="." method="_on_Load_pressed"]
[connection signal="pressed" from="VBoxContainer2/Export" to="." method="_on_Export_pressed"]
[connection signal="pressed" from="VBoxContainer/Text node" to="." method="_on_Text_node_pressed"]
[connection signal="pressed" from="VBoxContainer/Divert node" to="." method="_on_Divert_node_pressed"]
[connection signal="pressed" from="VBoxContainer/Question node" to="." method="_on_Question_node_pressed"]
[connection signal="pressed" from="VBoxContainer/Action node" to="." method="_on_Action_node_pressed"]
[connection signal="pressed" from="VBoxContainer/Random node" to="." method="_on_Random_node_pressed"]
[connection signal="pressed" from="VBoxContainer3/HBoxContainer/Button" to="." method="_on_Add_pressed"]
[connection signal="pressed" from="VBoxContainer3/HBoxContainer/Button3" to="." method="_on_Edit_pressed"]
[connection signal="pressed" from="VBoxContainer3/HBoxContainer/Button2" to="." method="_on_Remove_pressed"]
